refach: remove logger, remove uneces imports and etc